# github-researcher

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
scripts/: test_sdk.py
src/github_researcher/: __init__.py  _version.py  cli.py  config.py  exceptions.py  sdk.py
src/github_researcher/models/: __init__.py  activity.py  contribution.py  repository.py  user.py
src/github_researcher/output/: __init__.py  console.py  json_writer.py
src/github_researcher/services/: __init__.py  activity_collector.py  contribution_collector.py  github_graphql_client.py  github_rest_client.py  profile_collector.py  repo_collector.py
src/github_researcher/utils/: __init__.py  pagination.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_models.py  test_rate_limiter.py  test_sdk.py  test_sdk_integration.py  test_utils.py
tests/cassettes/sdk/: analyze_octocat.yaml  error_repos_user_not_found.yaml  error_user_not_found.yaml  get_activity_deep_octocat.yaml  get_activity_octocat.yaml  get_activity_summary_octocat.yaml  get_profile_not_found.yaml  get_profile_octocat.yaml  get_repos_octocat.yaml
