[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-researcher"
dynamic = ["version"]
description = "SDK and CLI tool to track and analyze public GitHub user activity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GitHub Researcher", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "gql>=3.5.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "vcrpy>=5.1.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "ruff>=0.1.0",
]
scrape = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
github-researcher = "github_researcher.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=github_researcher --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N806"]  # Allow PascalCase variable names for mocks
"src/github_researcher/_version.py" = ["UP007"]  # Auto-generated file

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.setuptools_scm]
write_to = "src/github_researcher/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
